fixing css keyboard to bottom and word wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
 /* GLOBALS */
 
 
-
+html, body, #root {
+  height: 100%;
+}
 
 
 body {
@@ -42,7 +44,8 @@ body {
   text-align: center;
   color: white;
   height: 100%;
-
+  display: flex;
+  flex-direction: column;
 }
 
 
@@ -54,6 +57,9 @@ body {
   height: auto;
   margin-left: auto;
   margin-right: auto;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 
@@ -250,7 +256,19 @@ body {
 }
 
 
+.image-clue {
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
 
+.words {
+  display: inline-flex;
+  gap: 20px;
+  justify-content: center;
+}
 
 
 .helpMenu-carousel-container {
@@ -571,6 +589,11 @@ HANGMAN
 
 
   transition: background-color 300ms, border-color 300ms;
+
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
   
 
 
@@ -687,7 +710,9 @@ GAME
 */
 
 .game {
-
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 
